# AetherTune

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  publish-aur.yml  publish-brew.yml  publish-ppa.yml  release.yml
aur/: PKGBUILD
debian/: changelog  control  copyright  rules
docs/: PROFILING.md
src/: app.rs  main.rs
src/audio/: mod.rs  pipe.rs  player.rs  visualizer.rs
src/storage/: config.rs  favorites.rs  history.rs  mod.rs
src/ui/: header.rs  helpers.rs  launcher.rs  media_browser.rs  mod.rs  now_playing.rs  overlays.rs  perf_overlay.rs  settings.rs  shutdown.rs  song_log.rs  station_list.rs  stream_info.rs  visualizer.rs
