[package]
name = "AetherTune"
version = "0.5.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
radiobrowser = "0.4"
tokio = { version = "1", features = ["full"] }
rand = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_Security",
] }